--- a/Ex09-SimpleDataReteieve/app/src/main/AndroidManifest.xml
+++ b/Ex09-SimpleDataReteieve/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.coderbd.ex08_linearlayout">
+    package="com.coderbd.ex09_simpledatareteieve">
 
     <application
         android:allowBackup="true"
@@ -16,10 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LinearHorizontalActivity" />
-        <activity android:name=".LinearNestedlayout" />
-        <activity android:name=".LaineralAnother" />
-        <activity android:name=".LinearOneMore" />
+        <activity android:name=".Another"></activity>
     </application>
 
 </manifest>
