--- a/SharedPreferenceEx/gradle/wrapper/gradle-wrapper.properties
+++ b/SharedPreferenceEx/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Wed Apr 11 09:14:52 BDT 2018
+#Mon Apr 08 10:20:55 ALMT 2019
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.1-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.10.1-all.zip
