--- a/FirebaseQuickstartsforAndroid/auth/build.gradle
+++ b/FirebaseQuickstartsforAndroid/auth/build.gradle
@@ -5,9 +5,10 @@ buildscript {
         jcenter()
         mavenLocal()
         maven { url 'https://maven.google.com'  }
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.1'
+        classpath 'com.android.tools.build:gradle:3.3.2'
         classpath 'com.google.gms:google-services:3.2.1'
     }
 }
