--- a/FirebaseQuickstartsforAndroid/firestore/build.gradle
+++ b/FirebaseQuickstartsforAndroid/firestore/build.gradle
@@ -5,9 +5,10 @@ buildscript {
         jcenter()
         maven { url 'https://maven.google.com' }
         mavenLocal()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.1'
+        classpath 'com.android.tools.build:gradle:3.3.2'
         classpath 'com.google.gms:google-services:3.2.1'
 
         // NOTE: Do not place your application dependencies here; they belong
