--- a/FirebaseQuickstartsforAndroid/perf/build.gradle
+++ b/FirebaseQuickstartsforAndroid/perf/build.gradle
@@ -5,9 +5,10 @@ buildscript {
         jcenter()
         mavenLocal()
         maven { url 'https://maven.google.com'  }
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.1'
+        classpath 'com.android.tools.build:gradle:3.3.2'
         classpath('com.google.firebase:firebase-plugins:1.1.0') {
             // TODO This shouldn't be necessary with the next update
             exclude group: 'com.google.guava', module: 'guava-jdk5'
