--- a/okay-menu-example/OptionsMenuEx3/gradle/wrapper/gradle-wrapper.properties
+++ b/okay-menu-example/OptionsMenuEx3/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Wed Mar 28 11:33:29 BDT 2018
+#Mon Aug 05 16:24:57 ALMT 2019
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.1-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-5.1.1-all.zip
